# linuxcalculate

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: addtwo.h  convert.h  findMedia.h  foo.h  h2o.h  ismatch.h  ispalindrome.h  longestlenthsubstr.h  longestpalindrome.h  matrixluckynum.h  myatio.h  mylist.h  plus.h  reverse.h  treefunction.h  treenode.h  zeroevenodd.h
src/: addtwo.cpp  convert.cpp  findMedia.cpp  foo.cpp  h2o.cpp  ismatch.cpp  ispalindrome.cpp  longestlenthsubstr.cpp  longestpalindrome.cpp  matrixluckynum.cpp  myatio.cpp  mylist.cpp  plus.cpp  reverse.cpp  treefunction.cpp  treenode.cpp  zeroevenodd.cpp
